# ml-sales-forecasting-system

./: .gitignore  Dockerfile  Readme.md  dashboard.py  drift.py  features.py  ingest.py  main.py  predict.py  pyproject.toml  requirements.txt  retrain.py  train.py
.github/workflows/: ci.yml
Data/: targets.csv
data/: targets.csv
models/: feature_columns.pkl
