[project]
name = "real-time-sales-forcast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair<5",
    "annotated-types>=0.7.0",
    "evidently>=0.7.21",
    "fastapi>=0.135.1",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "mlflow>=1.27.0",
    "msgpack>=1.1.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "prophet>=1.3.0",
    "setuptools==70.0.0",
    "protobuf<5.0.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "streamlit>=1.19.0",
    "uvicorn>=0.42.0",
    "xgboost>=3.2.0",
]
